--- a/src/pages/fieldwork.astro
+++ b/src/pages/fieldwork.astro
@@ -171,8 +171,8 @@ import PageDescription from "../components/PageDescription.astro";
         subtitle="Belitung Island, Indonesia 🇮🇩"
       />
       <TimelineItem
-        date="December 2012"
-        title="June-July 2012"
+        date="June-July 2012"
+        title="Mt. Singgalang"
         subtitle="West Sumatra, Indonesia 🇮🇩"
       />
       <TimelineItem
