--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -129,7 +129,7 @@ const statsGridClasses = cntl`
       }
     </div>
     <div class={statsGridClasses}>
-      <Stats title="Fieldwork" value="30" unit="localities" url="/fieldwork" />
+      <Stats title="Fieldwork" value="30" unit="expeditions" url="/fieldwork" />
       <Stats
         title="Specimen contribution"
         value="10k"
