Clean texts and styles.

--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -2,4 +2,4 @@
 
 ---
 
-<p class="text-chetwode-950 dark:text-chetwode-50"><slot /></p>
+<p class="text-md text-chetwode-950 dark:text-chetwode-50"><slot /></p>
