--- a/src/pages/fieldwork.astro
+++ b/src/pages/fieldwork.astro
@@ -16,10 +16,9 @@ import PageDescription from "../components/PageDescription.astro";
       <PageDescription>
         My fieldwork is mainly on islands in Southeast Asia. However, I have
         also had the privilege of joining fieldwork in Australia and the
-        mainland United States. My fieldwork journey spans over 12 years,
-        conducting 30+ field expeditions across five countries. It is only
-        possible with the help of local communities, park rangers, local
-        students, and colleagues.
+        mainland United States. The journey spans over 12 years, conducting 30+
+        field expeditions across five countries. It is only possible with the
+        help of local communities, park rangers, local students, and colleagues.
       </PageDescription>
     </PageTitle>
     <Timeline>
