--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -15,15 +15,15 @@ import Link from "../components/Link.astro";
     <Background backgroundImage={researchIcon} />
     <PageTitle title="Research Projects">
       <PageDescription>
-        My research focuses on understanding the patterns that generate species
-        diversity within and across islands. I am particularly interested in the
-        evolution of small mammals in the Indo-Australian Archipelago. I am also
-        involved in projects on other taxa, such as plants and birds. My
-        research integrates fieldwork, museum collections, and the development
-        of genomic tools to address questions about speciation, biogeography,
-        and conservation. I work towards making biodiversity research involving
-        genomic data accessible to students and researchers with limited access
-        to computing resources.
+        My research centers on understanding the patterns that drive species
+        diversity both within and across islands. I have a particular interest
+        in the evolution of small mammals in the Indo-Australian Archipelago.
+        Additionally, I have been involved in projects that focus on other taxa,
+        including plants and birds. My research integrates fieldwork, museum
+        collections, and the development of genomic tools to address questions
+        related to speciation, biogeography, and conservation. I strive to make
+        biodiversity research, especially involving genomic data, accessible to
+        students and researchers with limited access to computing resources.
       </PageDescription>
     </PageTitle>
     <div class="my-8">
