--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -17,7 +17,7 @@ import Link from "../components/Link.astro";
       <PageDescription>
         My research centers on understanding the patterns that drive species
         diversity both within and across islands. I have a particular interest
-        in the evolution of small mammals in the Indo-Australian Archipelago.
+        in the speciation of small mammals in the Indo-Australian Archipelago.
         Additionally, I have been involved in projects that focus on other taxa,
         including plants and birds. My research integrates fieldwork, museum
         collections, and the development of genomic tools to address questions
