Fix snackbar sizing issue in small screen.

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -43,15 +43,16 @@ const spaceClasses = cntl`
         the Pleistocene, while the Sahul Shelf islands experienced similar
         connections. Sulawesi formed from separate islands, and others like the
         Moluccas and Lesser Sunda islands were never connected to nearby
-        landmasses. Isolated mountains within these islands promote speciation.
-        Our research focuses on small mammal diversity and evolution,
-        particularly in Sulawesi and the Sunda Shelf, involving extensive
-        fieldwork, genomic studies using thousands of loci, and describing
-        undocumented species as necessary. For my dissertation I focus on the
-        diversification of hill rats (<i>Bunomys</i>) on Sulawesi, aiming to
-        understand how the island's geological history shaped their diversity,
-        which will aid in conservation efforts and improve our understanding of
-        speciation on a large, isolated island.
+        landmasses. Isolated mountains within these islands promote other
+        opportunities for speciation. This project focuses on studying small
+        mammal diversity and speciation, particularly in Sulawesi and the Sunda
+        Shelf, involving extensive fieldwork, genomic studies, and describing
+        undocumented species as necessary. For my dissertation, I focus on in
+        situ diversification of hill rats (<i>Bunomys</i>) on Sulawesi, aiming
+        to improve phylogenetic resolution and understand how the island's
+        geological history has shaped their diversity. This research will aid
+        conservation efforts and deepen our understanding of speciation on a
+        large, isolated island like Sulawesi.
         <div class="mt-4 mb-2 text-semibold">Publications:</div>
         <ProjectPubs author="Esselstyn et. al.">
           <PubButton
@@ -133,13 +134,19 @@ const spaceClasses = cntl`
         subtitle="Accessible software empowering new learners"
       />
       <Content>
-        From fieldwork to laboratory work, field-based evolutionary studies have
-        become increasingly complex. For museum scientists, collecting specimens
-        with dozens of accompanying parts are common practices nowadays. Genomic
-        sequencing from thousands of loci to a whole genome have become the
-        norm. I am working on developing open and accessible software to
-        minimize the complexity, targeting the most neglected aspect of the
-        workflow.
+        Field-based evolutionary studies have become increasingly complex,
+        including everything from data collection in the field to downstream
+        data analysis. For museum scientists, it is now common practice to
+        collect voucher specimens with numerous accompanying parts. On the
+        downstream side, studying biodiversity using genomic sequencing, ranging
+        from thousands of loci to entire genomes, has become the new standard. I
+        am developing open and accessible software to simplify these complex
+        workflows, improve data integration and research reproducibility, and
+        promote inclusive, mutually beneficial international collaborations. I
+        adopt emerging technologies in software development to create
+        user-friendly, memory-efficient, and mobile-friendly software whenever
+        possible, leveraging heterogeneous computing to accelerate data
+        processing.
         <div class="mt-4 mb-2 text-semibold">Publications:</div>
         <ProjectPubs author="Handika and Esselstyn">
           <PubButton
