Update software project description.

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -136,17 +136,19 @@ const spaceClasses = cntl`
       <Content>
         Field-based evolutionary studies have become increasingly complex,
         including everything from data collection in the field to downstream
-        data analysis. For museum scientists, it is now common practice to
-        collect voucher specimens with numerous accompanying parts. On the
-        downstream side, studying biodiversity using genomic sequencing, ranging
-        from thousands of loci to entire genomes, has become the new standard. I
-        am developing open and accessible software to simplify these complex
-        workflows, improve data integration and research reproducibility, and
-        promote inclusive, mutually beneficial international collaborations. I
-        adopt emerging technologies in software development to create
-        user-friendly, memory-efficient, and mobile-friendly software whenever
-        possible, leveraging heterogeneous computing to accelerate data
-        processing.
+        data analysis. It is now standard practice for museum scientists to
+        collect voucher specimens with numerous accompanying parts and complex
+        associated data features. On the downstream side, studying biodiversity
+        using genomic sequencing, ranging from thousands of loci to entire
+        genomes, has become the new standard. I am developing open and
+        accessible software to simplify these complex workflows, improve data
+        integration and research reproducibility, and promote inclusive and
+        mutually beneficial international collaborations. I adopt emerging
+        technologies in software development to create user-friendly,
+        memory-efficient, and mobile-friendly software whenever possible. By
+        leveraging advancements in hardware technology, I aim to accelerate data
+        processing while promoting energy and resource-efficient computing
+        practices.
         <div class="mt-4 mb-2 text-semibold">Publications:</div>
         <ProjectPubs author="Handika and Esselstyn">
           <PubButton
