--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -26,10 +26,11 @@ const spaceClasses = cntl`
         conservation questions. In particular, it centers on identifying
         patterns of small mammal diversity and understanding speciation
         processes within and across islands in the Indo-Australian Archipelago.
-        I have also engaged in projects focusing on other taxa in other regions.
-        I strive to make biodiversity research, especially involving genomic
-        data, accessible to students and researchers with limited technical
-        knowledge and access to computing resources.
+        I have also engaged in projects focusing on other taxa and regions,
+        aiming to help advance biodiversity research. I strive to make
+        biodiversity research, especially involving museum collections and
+        genomic data, accessible to students and researchers with limited
+        technical knowledge and access to computing resources.
       </PageDescription>
     </PageTitle>
     <div class="my-8">
@@ -145,10 +146,10 @@ const spaceClasses = cntl`
         integration and research reproducibility, and promote inclusive and
         mutually beneficial international collaborations. I adopt emerging
         technologies in software development to create user-friendly,
-        memory-efficient, and mobile-friendly software whenever possible. By
-        leveraging advancements in hardware technology, I aim to accelerate data
-        processing while promoting energy and resource-efficient computing
-        practices.
+        memory-efficient, and mobile-friendly software whenever possible. I also
+        take advantage of improvements in CPU technology and heterogenous
+        computing to accelerate data processing while promoting energy and
+        resource-efficient computing practices.
         <div class="mt-4 mb-2 text-semibold">Publications:</div>
         <ProjectPubs author="Handika and Esselstyn">
           <PubButton
