--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -106,8 +106,9 @@ const statsGridClasses = cntl`
       </PageDescription>
       <p class={heroTextClasses}>
         I study small mammal diversity and speciation on islands and develop
-        software to improve data integration and management, promote
-        collaboration, and increase the accessibility of biodiversity research
+        software to improve data integration and management, promote mutually
+        beneficial collaboration, and increase the accessibility of biodiversity
+        research.
       </p>
     </div>
     <div class={socialMediaClasses}>
