--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -26,11 +26,11 @@ const spaceClasses = cntl`
         conservation questions. In particular, it centers on identifying
         patterns of small mammal diversity and understanding speciation
         processes within and across islands in the Indo-Australian Archipelago.
-        I have also engaged in projects focusing on other taxa and regions,
-        aiming to help advance biodiversity research. I strive to make
-        biodiversity research, especially involving museum collections and
-        genomic data, accessible to students and researchers with limited
-        technical knowledge and access to computing resources.
+        I have also engaged in projects focusing on other taxa and regions to
+        help advance biodiversity research. I strive to make research involving
+        museum collections and genomic data accessible to students and
+        researchers with limited technical knowledge and access to computing
+        resources.
       </PageDescription>
     </PageTitle>
     <div class="my-8">
@@ -131,8 +131,8 @@ const spaceClasses = cntl`
         <br class="" />
       </div>
       <SectionHead
-        title="Inclusive Open Source Software"
-        subtitle="Accessible software empowering new learners"
+        title="Inclusive, Open, and Accessible Software"
+        subtitle="Developing digital tools empowering new learners in biodiversity studies"
       />
       <Content>
         Field-based evolutionary studies have become increasingly complex,
