Make text color consistent.

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -132,7 +132,7 @@ const spaceClasses = cntl`
       </div>
       <SectionHead
         title="Inclusive, Open, and Accessible Software"
-        subtitle="Developing digital tools empowering new learners in biodiversity studies"
+        subtitle="Developing digital tools empowering new learners in evolutionary studies"
       />
       <Content>
         Field-based evolutionary studies have become increasingly complex,
