--- a/src/components/buttons/PubButton.astro
+++ b/src/components/buttons/PubButton.astro
@@ -2,6 +2,7 @@
 import WrapButton from "../../layouts/WrapButton.astro";
 import DownloadButton from "./DownloadButton.astro";
 import SendMessageButton from "./SendMessageButton.astro";
+import leadingIcon from "../../assets/icons/analysis.svg";
 import cntl from "cntl";
 
 interface PubButton {
@@ -48,18 +49,12 @@ const snackbarClasses = cntl`
 </button>
 
 <div id="snackbar" role="alert" class={snackbarClasses}>
-  <svg
-    xmlns="http://www.w3.org/2000/svg"
-    fill="none"
-    viewBox="0 0 24 24"
-    class="stroke-info h-6 w-6 shrink-0"
-  >
-    <path
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      stroke-width="2"
-      d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-  </svg>
+  <img
+    src={leadingIcon.src}
+    alt="Analysis icon"
+    class="h-8 w-8 mx-auto"
+    aria-hidden="true"
+  />
   <div class="text-start">
     <h3 class="font-bold">{title}</h3>
     <div class="text-xs">{author}. {year}</div>
