Make fieldwork stories more fun.

--- a/src/pages/fieldwork.astro
+++ b/src/pages/fieldwork.astro
@@ -15,10 +15,16 @@ import PageDescription from "../components/PageDescription.astro";
     <PageTitle title="Fieldwork">
       <PageDescription>
         My fieldwork is mainly on islands in Southeast Asia. However, I have
-        also had the privilege of joining fieldwork in Australia and the
+        also been privileged to participate in fieldwork in Australia and the
         mainland United States. The journey spans over 12 years, conducting 30+
-        field expeditions across five countries. It is only possible with the
-        help of local communities, park rangers, local students, and colleagues.
+        field expeditions across five countries. These field expeditions
+        involved countless people, from local communities, park rangers,
+        friends, colleagues, and research advisors to students that I had the
+        privilege to mentor. I started as someone more useful in washing dishes
+        than preparing specimens in the field 😉, to someone who can lead a
+        complex field expedition in remote mountains of Indonesia and contribute
+        the growth of essential reasearch collections. Kudos to all the people
+        who have been part of this journey!
       </PageDescription>
     </PageTitle>
     <Timeline>
